--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "authereum": "^0.1.14",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
+    "coingecko-api": "^1.0.10",
     "copy-to-clipboard": "^3.3.1",
     "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
