--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_NETWORK_URL="https://rpc-testnet.kcc.network"
+REACT_APP_KCC_EXPLORER="https://scan-testnet.kcc.network"
 REACT_APP_CHAIN_ID="322"
 REACT_APP_NETWORK_ENV="test"
 PORT=3000
