--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
+    "swiper": "6.8.4",
     "uuid": "^3.4.0",
     "web-vitals": "^1.0.1",
     "web3": "^1.5.3",
