--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,7 @@ SKIP_PREFLIGHT_CHECK=true
 REACT_APP_NETWORK_URL="https://rpc-testnet.kcc.network"
 REACT_APP_KCC_EXPLORER="https://scan-testnet.kcc.network"
 REACT_APP_CHAIN_ID="322"
+REACT_APP_DEPOLY_BLOCK="12933281"
 REACT_APP_NETWORK_ENV="test"
 PORT=3000
 REACT_APP_GRAPH_URL="https://t-thegraph.kcc.network/subgraphs/name/kcc/kcc-staking-subgraph"
