--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,6 @@ SKIP_PREFLIGHT_CHECK=true
 REACT_APP_NETWORK_URL="https://rpc-mainnet.kcc.network"
 REACT_APP_KCC_EXPLORER="https://explorer.kcc.io"
 REACT_APP_CHAIN_ID="321"
+REACT_APP_DEPOLY_BLOCK="12933281"
 REACT_APP_NETWORK_ENV="main"
 REACT_APP_GRAPH_URL="https://t-thegraph.kcc.network/subgraphs/name/kcc/kcc-staking-subgraph"
