--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ethersproject/contracts": "^5.6.1",
     "@ethersproject/providers": "^5.4.0",
     "@ethersproject/solidity": "^5.6.0",
+    "@gnosis.pm/safe-apps-web3-react": "^1.4.2",
     "@metamask/logo": "^3.0.1",
     "@reduxjs/toolkit": "^1.5.1",
     "@types/react-helmet": "^6.1.4",
