--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-countup": "^6.2.0",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.3.5",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.10.0",
