--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "env-cmd": "^10.1.0",
     "ethereumjs-abi": "^0.6.8",
     "graphql-request": "^4.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "i18next": "^20.3.1",
     "lodash": "^4.17.21",
     "mojitoswap-sdk": "0.0.2",
