feat: delete unused code

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true 
 REACT_APP_NETWORK_URL="https://rpc-mainnet.kcc.network"
-REACT_APP_KCC_EXPLORER="https://explorer.kcc.io"
+REACT_APP_KCC_EXPLORER="https://scan.kcc.io"
 REACT_APP_CHAIN_ID="321"
 REACT_APP_DEPOLY_BLOCK="11892326"
 REACT_APP_NETWORK_ENV="main"
